<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lynearlayot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_default_filter"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_weight="0.54"
                    android:text="@string/from_layout39"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/button_choose_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_triangle" />

                <Button
                    android:id="@+id/button_clear_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:background="@drawable/ic_cancel_black" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox_sendsmsautomatically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector_flat2"
                android:text="@string/from_layout40"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <CheckBox
                android:id="@+id/checkBox_firstsendemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector_flat2"
                android:text="@string/from_layout41"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_prefix"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:text="@string/from_layout42"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editText_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:hint="@string/from_layout43"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
            
            
             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_fintsize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:text="@string/from_layout110"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editText_fonsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_gravity="center|right"
                    android:hint="     "
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>           

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp" />

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_imap"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout46"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_imap"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/from_layout46"
                        android:textAppearance="?android:attr/textAppearanceSmall" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_smtp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout47"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_smtp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout47"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_user"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout48"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_user"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout48"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout49"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout50"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <!-- android:inputType="textPassword" -->

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_frequency"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout51"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_frequency"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout52"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_from"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout53"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_from"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout54"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_lastemailid"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout55"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_lastemailid"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/from_layout56"
                        android:inputType="number"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/button_check_connection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_layout57" />

            
            <ImageView
                android:id="@+id/iv2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp" />       
            
            
            <TextView
                android:id="@+id/textView_toodledo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_layout106"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_toodledo1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout104"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_toodledo_email"
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textAppearance="?android:attr/textAppearanceSmall" >
                    </EditText>
                </TableRow> 
                
                 <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView_toodledo2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/from_layout105"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/editText_toodledo_pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceSmall" >
                    </EditText>
                </TableRow>                
                
                
             </TableLayout>
                        
                        <Button
                android:id="@+id/button_sync_toodledo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_layout107" />
                        
                        
                                    <CheckBox
                android:id="@+id/checkBox_toodoledo_every_60_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector_flat2"
                android:text="@string/from_layout108"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            

            <Button
                android:id="@+id/button_empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45sp"
        android:layout_alignParentBottom="true"
        android:background="#2c2c2c"
        android:gravity="center_vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/layoutsave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#2c2c2c"
            android:gravity="center|center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cab_done_holo_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/buttonsave"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/divider_bottom2" />

        <LinearLayout
            android:id="@+id/layoutcancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#2c2c2c"
            android:gravity="center|center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dialog_close_normal_holo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5sp"
                android:gravity="center"
                android:text="@string/buttoncancel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>