<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_ct_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:text="Date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView_ct_category"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
             android:layout_margin="5sp"         
            android:layout_gravity="center|left"
            android:gravity="center|left"
            android:layout_weight="1"
            android:lines="1"
            android:singleLine="true"
            android:text="Pick category"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edittext_ct_value"
            android:layout_width="60dp"
            android:layout_height="35sp"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:hint="@string/from_layout5"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceSmall" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="5sp"
            android:text="@string/from_layout102" />
    </LinearLayout>

  
  <EditText
        android:id="@+id/edittext_ct_comment2"
        android:layout_width="fill_parent"
        android:layout_height="35sp"
        android:hint="@string/from_layout6"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </EditText>
    
            <TextView
        android:id="@+id/textView_ct_task"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    
            <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ededed"/>


</LinearLayout>